; ModuleID = '/home/carl/AnghaBench/gb-studio/appData/src/gb/src/extr_UI.c_UICloseDialogue.c'
source_filename = "/home/carl/AnghaBench/gb-studio/appData/src/gb/src/extr_UI.c_UICloseDialogue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@menu_layout = common dso_local global i64 0, align 8
@MENU_LAYOUT_INITIAL_X = common dso_local global i32 0, align 4
@MENU_CLOSED_Y = common dso_local global i32 0, align 4
@text_out_speed = common dso_local global i32 0, align 4
@text_count = common dso_local global i64 0, align 8
@text_lines = common dso_local global i8* null, align 8
@text_tile_count = common dso_local global i64 0, align 8
@text_num_lines = common dso_local global i32 0, align 4
@FALSE = common dso_local global i8* null, align 8
@menu_enabled = common dso_local global i8* null, align 8
@avatar_enabled = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @UICloseDialogue() #0 {
  %1 = load i64, i64* @menu_layout, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %5

3:                                                ; preds = %0
  %4 = load i32, i32* @MENU_LAYOUT_INITIAL_X, align 4
  br label %6

5:                                                ; preds = %0
  br label %6

6:                                                ; preds = %5, %3
  %7 = phi i32 [ %4, %3 ], [ 0, %5 ]
  %8 = load i32, i32* @MENU_CLOSED_Y, align 4
  %9 = load i32, i32* @text_out_speed, align 4
  %10 = call i32 @UIMoveTo(i32 %7, i32 %8, i32 %9)
  store i64 0, i64* @text_count, align 8
  %11 = load i8*, i8** @text_lines, align 8
  %12 = getelementptr inbounds i8, i8* %11, i64 0
  store i8 0, i8* %12, align 1
  store i64 0, i64* @text_tile_count, align 8
  store i32 3, i32* @text_num_lines, align 4
  %13 = load i8*, i8** @FALSE, align 8
  store i8* %13, i8** @menu_enabled, align 8
  store i64 0, i64* @menu_layout, align 8
  %14 = load i8*, i8** @FALSE, align 8
  store i8* %14, i8** @avatar_enabled, align 8
  ret void
}

declare dso_local i32 @UIMoveTo(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
